Added parallax landing elements.

--- a/css/style.sass
+++ b/css/style.sass
@@ -63,3 +63,17 @@ img
   margin-left: -480px
   position: absolute
   width: 960px
+
+// Model Grid
+
+.clothes-pics
+  figure
+    margin-bottom: 20px
+    opacity: 0
+    position: relative
+    transform: translateX(20px)
+    transition: all 0.3s ease-in-out
+
+    &.is-showing
+      opacity: 1
+      transform: translateX(0)
