--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,13 @@ img {
   margin-left: -480px;
   position: absolute;
   width: 960px; }
+
+.clothes-pics figure {
+  margin-bottom: 20px;
+  opacity: 0;
+  position: relative;
+  transform: translateX(20px);
+  transition: all 0.3s ease-in-out; }
+  .clothes-pics figure.is-showing {
+    opacity: 1;
+    transform: translateX(0); }
