--- a/css/style.css
+++ b/css/style.css
@@ -66,3 +66,12 @@ img {
   .clothes-pics figure.is-showing {
     opacity: 1;
     transform: translateX(0); }
+
+.large-window {
+  height: 640px;
+  background-attachment: fixed;
+  background-image: url(../img/model2.jpg);
+  background-position: top center;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  margin-top: 100px; }
