--- a/css/style.sass
+++ b/css/style.sass
@@ -77,3 +77,15 @@ img
     &.is-showing
       opacity: 1
       transform: translateX(0)
+
+// large-window
+
+.large-window
+  height: 640px
+  background:
+    attachment: fixed
+    image: url(../img/model2.jpg)
+    position: top center
+    repeat: no-repeat
+  border-radius: 50%
+  margin-top: 100px
