--- a/css/style.css
+++ b/css/style.css
@@ -57,15 +57,36 @@ img {
   position: absolute;
   width: 960px; }
 
-.clothes-pics figure {
-  margin-bottom: 20px;
-  opacity: 0;
-  position: relative;
-  transform: translateX(20px);
-  transition: all 0.3s ease-in-out; }
-  .clothes-pics figure.is-showing {
-    opacity: 1;
-    transform: translateX(0); }
+.clothes-pics {
+  margin-bottom: 100px; }
+  .clothes-pics figure {
+    cursor: pointer;
+    margin-bottom: 20px;
+    opacity: 0;
+    position: relative;
+    transform: translateX(20px);
+    transition: all 0.3s ease-in-out;
+    overflow: hidden; }
+    .clothes-pics figure.is-showing {
+      opacity: 1;
+      transform: translateX(0); }
+    .clothes-pics figure img {
+      display: block;
+      transform: scale(1);
+      transition: all 0.3s ease-in-out; }
+    .clothes-pics figure:hover figcaption {
+      left: 0%; }
+    .clothes-pics figure:hover img {
+      transform: scale(1.1); }
+  .clothes-pics figcaption {
+    background: black;
+    bottom: 10px;
+    color: white;
+    font-size: 11px;
+    left: -100%;
+    padding: 2px 8px;
+    position: absolute;
+    transition: all 0.3s ease-in-out; }
 
 .large-window {
   height: 640px;
