--- a/css/style.sass
+++ b/css/style.sass
@@ -67,16 +67,43 @@ img
 // Model Grid
 
 .clothes-pics
+  margin-bottom: 100px
+
   figure
+    cursor: pointer
     margin-bottom: 20px
     opacity: 0
     position: relative
     transform: translateX(20px)
     transition: all 0.3s ease-in-out
+    overflow: hidden
 
     &.is-showing
       opacity: 1
       transform: translateX(0)
+
+    img
+      display: block
+      transform: scale(1)
+      transition: all 0.3s ease-in-out
+
+    &:hover
+      figcaption
+        left: 0%
+
+      img
+        transform: scale(1.1)
+
+  figcaption
+    background: #000
+    bottom: 10px
+    color: #fff
+    font-size: 11px
+    left: -100%
+    padding: 2px 8px
+    position: absolute
+    transition: all 0.3s ease-in-out
+
 
 // large-window
 
