Added periscope effect to the rounded item.

--- a/css/style.sass
+++ b/css/style.sass
@@ -112,7 +112,49 @@ img
   background:
     attachment: fixed
     image: url(../img/model2.jpg)
-    position: top center
-    repeat: no-repeat
+    position: center 0
+    repeat: repeat-y
   border-radius: 50%
   margin-top: 100px
+  position: relative
+
+.window-tint
+  align-items: center
+  background-color: rgba(0, 0, 0, 0.5)
+  border-radius: 50%
+  bottom: 0
+  display: flex
+  justify-content: center
+  left: 0
+  position: absolute
+  right: 0
+  top: 0
+
+.promo-text
+  color: #fff
+  font-size: 50px
+  font-weight: 100
+  line-height: 1.2
+
+  strong
+    display: block
+    font-size: 30px
+
+  span
+    font:
+      size: 18px
+      style: italic
+      weight: 300
+    color: rgba(255, 255, 255, 0.6)
+
+  .window-cta
+    border: 1px solid #fff
+    color: #fff
+    font-size: 20px
+    padding: 10px 20px
+    text-decoration: none
+    transition: all 0.3s ease-in-out
+
+    &:hover
+      background: #fff
+      color: #000
