--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,44 @@ img {
   height: 640px;
   background-attachment: fixed;
   background-image: url(../img/model2.jpg);
-  background-position: top center;
-  background-repeat: no-repeat;
+  background-position: center 0;
+  background-repeat: repeat-y;
   border-radius: 50%;
-  margin-top: 100px; }
+  margin-top: 100px;
+  position: relative; }
+
+.window-tint {
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 50%;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0; }
+
+.promo-text {
+  color: white;
+  font-size: 50px;
+  font-weight: 100;
+  line-height: 1.2; }
+  .promo-text strong {
+    display: block;
+    font-size: 30px; }
+  .promo-text span {
+    font-size: 18px;
+    font-style: italic;
+    font-weight: 300;
+    color: rgba(255, 255, 255, 0.6); }
+  .promo-text .window-cta {
+    border: 1px solid white;
+    color: white;
+    font-size: 20px;
+    padding: 10px 20px;
+    text-decoration: none;
+    transition: all 0.3s ease-in-out; }
+    .promo-text .window-cta:hover {
+      background: white;
+      color: black; }
