Adding blog floating elements to the page.

--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@ img {
   background-position: center 0;
   background-repeat: repeat-y;
   border-radius: 50%;
+  margin-bottom: 100px;
   margin-top: 100px;
   position: relative; }
 
@@ -133,3 +134,17 @@ img {
     .promo-text .window-cta:hover {
       background: white;
       color: black; }
+
+.blog-posts {
+  margin-top: 100px; }
+  .blog-posts .post {
+    background: white;
+    border: 1px solid #e1e1e1;
+    padding: 20px 20px 0;
+    position: relative; }
+  .blog-posts .post-1 {
+    transform: translate(100px, 20px); }
+  .blog-posts .post-2 {
+    z-index: 2; }
+  .blog-posts .post-3 {
+    transform: translate(-100px, 20px); }
