--- a/css/style.sass
+++ b/css/style.sass
@@ -115,6 +115,7 @@ img
     position: center 0
     repeat: repeat-y
   border-radius: 50%
+  margin-bottom: 100px
   margin-top: 100px
   position: relative
 
@@ -158,3 +159,23 @@ img
     &:hover
       background: #fff
       color: #000
+
+// Posts
+
+.blog-posts
+  margin-top: 100px
+
+  .post
+    background: #fff
+    border: 1px solid #e1e1e1
+    padding: 20px 20px 0
+    position: relative
+
+  .post-1
+    transform: translate(100px, 20px)
+
+  .post-2
+    z-index: 2
+
+  .post-3
+    transform: translate(-100px, 20px)
