--- a/css/style.sass
+++ b/css/style.sass
@@ -9,6 +9,11 @@ figure
   margin: auto
 
 .content
+  background: #fff
+  margin-bottom: 300px
+  position: relative
+  z-index: 2
+
   article
     margin: 0 auto
     max-width: 640px
@@ -29,6 +34,7 @@ img
   height: 600px
   overflow: hidden
   position: relative
+  z-index: 3
 
 .logo
   background:
@@ -74,8 +80,8 @@ img
     margin-bottom: 20px
     opacity: 0
     position: relative
-    transform: translateX(20px)
-    transition: all 0.3s ease-in-out
+    transform: translateX(30px)
+    transition: all 0.4s ease-in-out
     overflow: hidden
 
     &.is-showing
@@ -179,3 +185,20 @@ img
 
   .post-3
     transform: translate(-100px, 20px)
+
+// Footer
+
+footer
+  background: #000
+  bottom: 0
+  color: #fff
+  padding: 40px 0
+  position: fixed
+  width: 100%
+
+  .footer-stuff
+    margin: 0 auto
+    max-width: 640px
+
+  a
+    color: #fff
